--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@telegram-apps/sdk-react": "^3.3.1",
     "@twa-dev/sdk": "^7.8.0",
+    "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.30.1",
+    "rippleui": "^1.12.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
